--- a/main.css
+++ b/main.css
@@ -16,11 +16,62 @@
     grid-template-columns: 9fr 1fr;
     column-gap:5px;
     width:100%;
-    outline: 2px solid red;
+    outline: solid 2px red;
 }
 .img-container:hover{
     cursor:pointer;
 }
+.month.error, .day.error, .year.error{
+    border:2px solid red;
+    position:relative;
+    z-index:-1;
+}
+/* .month.error::after, .day.error::after, .year.error::after{
+    position:absolute;
+    content:"Field is required";
+    outline: 2px solid green;
+    width:100%;
+    height:50px;
+    top:0;
+    left:0;
+    z-index:1;
+} */
+form{
+    display:flex;
+}
+
+
+.date-form .day.error::after,
+.date-form .month.error::after,
+.date-form .year.error::after {
+    position: absolute;
+    content: "Field is required";
+    outline: 2px solid green;
+    width: 100%;
+    height: auto; /* Adjusted height to auto */
+    top: 100%; /* Position it below the input field */
+    left: 0;
+    color: white; /* Set a contrasting text color */
+    background-color: green; /* Set a background color */
+    display:inline-block;
+}
+.day-container, 
+.month-container, 
+.year-container{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    margin-right:5px;
+
+}
+.day-container.error::after,
+.month-container.error::after,
+.year-container.error::after{
+    content: "Field is required";
+    color: red;
+}
+
+
 img {
     background-color:purple;
     border-radius: 50%;
@@ -33,6 +84,10 @@ img {
 
 /* I couldn't use the pseudo element with the img tag because it was 
    a self-closing tag */
+button{
+    background:none;
+    border:none;
+}
 
 .img-container::before{ 
     height: 2px;
@@ -41,7 +96,6 @@ img {
     width: 100%;
     /* left:0; */
     transform:translateY(22px);
-    z-index:-10;
 }
 /* .img-container::after{ 
  
