--- a/main.css
+++ b/main.css
@@ -14,11 +14,8 @@ body{
     color: hsl(228, 45%, 44%); 
 }
 
-.img-container {
+.img-container{
     position:relative;
-    /* display:grid;
-    grid-template-columns: 8.5fr 1.5fr; */
-    /* column-gap:5px; */
     width:90%;
     margin-top:10px;
     margin-left:40px;
@@ -83,12 +80,11 @@ body{
     margin-top:5px;
 }
 
-img {
+img{
     position:absolute;
     background-color: hsl(259, 100%, 65%);
     border-radius: 50%;
     padding:15px;
-    text-align:center;
     right:0;
     top:0;
     z-index:10;
@@ -198,10 +194,6 @@ h3 span{
     .main-card{
         width:90%;
     }
-
-
-    
-    
 } 
 
 @media only screen and (max-width:375px){
@@ -223,13 +215,17 @@ h3 span{
         width:90%;
     }
 
-    img{
+    img {
+        position:absolute;
         left:39%;
+        margin-right:0;
     }
 
     .img-container{
+        position:relative;
         width:100%;
         margin-left:0;
+        outline:2px solid red;
     }
 
     .img-container::before{
