--- a/main.css
+++ b/main.css
@@ -7,8 +7,9 @@ body{
     background-color:hsl(0, 0%, 94%);
 }
 .attribution { 
-    font-size: 11px; 
+    font-size: 17px; 
     text-align: center; 
+    margin-top:10px;
 }
 .attribution a { 
     color: hsl(228, 45%, 44%); 
